--- a/index.html
+++ b/index.html
@@ -66,35 +66,35 @@
     <div class="habitat">
         <h2 style="color: #4CAF50;">Dinosaur Habitat</h2>
         <p style="color: #333;">Earnings: $<span id="dinosaur-earnings">0</span> per second</p>
-        <button class="button" onclick="buyHabitat('dinosaur')">Buy Dinosaur Habitat ($200)</button>
+        <button class="button" id="buy-dinosaur-habitat">Buy Dinosaur Habitat ($200)</button>
     </div>
 
     <!-- Animal Habitat -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Animal Habitat</h2>
         <p style="color: #333;">Earnings: $<span id="animal-earnings">0</span> per second</p>
-        <button class="button" onclick="buyHabitat('animal')">Buy Animal Habitat ($50)</button>
+        <button class="button" id="buy-animal-habitat">Buy Animal Habitat ($50)</button>
     </div>
 
     <!-- Electric Fence -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Electric Fence</h2>
         <p style="color: #333;">Cost: $100</p>
-        <button class="button" onclick="buyElectricFence()">Buy Electric Fence</button>
+        <button class="button" id="buy-electric-fence">Buy Electric Fence</button>
     </div>
 
     <!-- Military Jeep -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Military Jeep</h2>
         <p style="color: #333;">Cost: $500</p>
-        <button class="button" onclick="buyMilitaryJeep()">Buy Military Jeep</button>
+        <button class="button" id="buy-military-jeep">Buy Military Jeep</button>
     </div>
 
     <!-- Hire Guards -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Guards</h2>
         <p style="color: #333;">Cost: $10 per minute</p>
-        <button class="button" onclick="hireGuards()">Hire Guards</button>
+        <button class="button" id="hire-guards">Hire Guards</button>
     </div>
 
     <p id="random-event-display"></p>
