--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             document.getElementById('money').textContent = gameMoney;
             document.getElementById('dinosaur-earnings').textContent = habitats.dinosaur.earnings * habitats.dinosaur.count;
             document.getElementById('animal-earnings').textContent = habitats.animal.earnings * habitats.animal.count;
+            document.getElementById('money-display').textContent = 'Money: $' + gameMoney; // Update money display
         }
 
         function buyHabitat(habitatType) {
