--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             margin-right: 10px;
         }
 
+        .error-message {
+            color: red;
+            font-weight: bold;
+        }
+
         #money-display {
             font-size: 20px;
             font-weight: bold;
@@ -66,46 +71,63 @@
     <div class="habitat">
         <h2 style="color: #4CAF50;">Dinosaur Habitat</h2>
         <p style="color: #333;">Earnings: $<span id="dinosaur-earnings">0</span> per second</p>
-        <button class="button" id="buy-dinosaur-habitat">Buy Dinosaur Habitat ($200)</button>
-        <button class="button" id="add-trex">Add T-Rex ($100)</button>
-        <button class="button" id="add-raptor">Add Raptor ($50)</button>
-        <!-- Add 18 more dinosaur buttons as needed -->
+        <button class="button" id="buy-dinosaur-habitat">Buy Dinosaur Habitat ($200) 🏡</button>
+        <button class="button" id="add-trex">Add T-Rex ($20) 🦖</button>
+        <button class="button" id="add-raptor">Add Raptor ($15) 🦖</button>
+        <button class="button" id="add-dino-velociraptor">Add Velociraptor ($10) 🦖</button>
+        <button class="button" id="add-dino-stegosaurus">Add Stegosaurus ($8) 🦕</button>
+        <button class="button" id="add-dino-triceratops">Add Triceratops ($12) 🦕</button>
+        <button class="button" id="add-dino-brachiosaurus">Add Brachiosaurus ($25) 🦕</button>
+        <button class="button" id="add-dino-pterodactyl">Add Pterodactyl ($18) 🦅</button>
+        <button class="button" id="add-dino-ankylosaurus">Add Ankylosaurus ($15) 🦕</button>
+        <!-- Add more dinosaur buttons as needed -->
+        <button class="button" id="add-dino-diplodocus">Add Diplodocus ($22) 🦕</button>
+        <button class="button" id="add-dino-allosaurus">Add Allosaurus ($30) 🦖</button>
+        <!-- ... Add more dinosaur buttons ... -->
     </div>
 
     <!-- Animal Habitat -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Animal Habitat</h2>
         <p style="color: #333;">Earnings: $<span id="animal-earnings">0</span> per second</p>
-        <button class="button" id="buy-animal-habitat">Buy Animal Habitat ($50)</button>
-        <button class="button" id="add-chicken">Add Chicken ($10)</button>
-        <button class="button" id="add-goat">Add Goat ($20)</button>
-        <button class="button" id="add-horse">Add Horse ($30)</button>
-        <button class="button" id="add-generic-animal">Add Generic Animal ($15)</button>
-        <!-- Add 16 more animal buttons as needed -->
+        <button class="button" id="buy-animal-habitat">Buy Animal Habitat ($50) 🏡</button>
+        <button class="button" id="add-animal-chicken">Add Chicken ($2) 🐔</button>
+        <button class="button" id="add-animal-goat">Add Goat ($4) 🐐</button>
+        <button class="button" id="add-animal-horse">Add Horse ($5) 🐴</button>
+        <button class="button" id="add-animal-pig">Add Pig ($3) 🐷</button>
+        <button class="button" id="add-animal-cow">Add Cow ($6) 🐄</button>
+        <button class="button" id="add-animal-sheep">Add Sheep ($7) 🐑</button>
+        <button class="button" id="add-animal-elephant">Add Elephant ($25) 🐘</button>
+        <button class="button" id="add-animal-zebra">Add Zebra ($15) 🦓</button>
+        <!-- Add more animal buttons as needed -->
+        <button class="button" id="add-animal-lion">Add Lion ($20) 🦁</button>
+        <button class="button" id="add-animal-tiger">Add Tiger ($22) 🐅</button>
+        <!-- ... Add more animal buttons ... -->
     </div>
 
     <!-- Electric Fence -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Electric Fence</h2>
         <p style="color: #333;">Cost: $100</p>
-        <button class="button" id="buy-electric-fence">Buy Electric Fence</button>
+        <button class="button" id="buy-electric-fence">Buy Electric Fence ⚡</button>
     </div>
 
     <!-- Military Jeep -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Military Jeep</h2>
         <p style="color: #333;">Cost: $500</p>
-        <button class="button" id="buy-military-jeep">Buy Military Jeep</button>
+        <button class="button" id="buy-military-jeep">Buy Military Jeep 🚙</button>
     </div>
 
     <!-- Hire Guards -->
     <div class="habitat">
         <h2 style="color: #4CAF50;">Guards</h2>
         <p style="color: #333;">Cost: $10 per minute</p>
-        <button class="button" id="hire-guards">Hire Guards</button>
+        <button class="button" id="hire-guards">Hire Guards 👮</button>
     </div>
 
     <p id="random-event-display"></p>
+    <p class="error-message" id="error-message"></p>
 </div>
 
 <script>
@@ -124,6 +146,9 @@
                 animals: {
                     trex: 0,
                     raptor: 0,
+                    velociraptor: 0,
+                    // Add more dinosaurs as needed
+                    stegosaurus: 0
                     // Add more dinosaurs as needed
                 }
             },
@@ -136,7 +161,9 @@
                     chicken: 0,
                     goat: 0,
                     horse: 0,
-                    generic: 0,
+                    pig: 0,
+                    // Add more animals as needed
+                    cow: 0
                     // Add more animals as needed
                 }
             }
@@ -169,7 +196,10 @@
                 habitat.count++;
                 updateUI();
             } else {
-                console.log('Not enough money to buy ' + habitat.name);
+                document.getElementById('error-message').textContent = 'Not enough money to buy ' + habitat.name;
+                setTimeout(() => {
+                    document.getElementById('error-message').textContent = '';
+                }, 3000);
             }
         }
 
@@ -181,10 +211,16 @@
                     habitat.animals[animalType]++;
                     updateUI();
                 } else {
-                    console.log('Not enough money to add ' + animalType);
+                    document.getElementById('error-message').textContent = 'Not enough money to add ' + animalType;
+                    setTimeout(() => {
+                        document.getElementById('error-message').textContent = '';
+                    }, 3000);
                 }
             } else {
-                console.log('You need to buy ' + habitat.name + ' first.');
+                document.getElementById('error-message').textContent = 'You need to buy ' + habitat.name + ' first.';
+                setTimeout(() => {
+                    document.getElementById('error-message').textContent = '';
+                }, 3000);
             }
         }
 
@@ -194,7 +230,10 @@
                 electricFence = true;
                 updateUI();
             } else {
-                console.log('Not enough money or already purchased Electric Fence');
+                document.getElementById('error-message').textContent = 'Not enough money or already purchased Electric Fence';
+                setTimeout(() => {
+                    document.getElementById('error-message').textContent = '';
+                }, 3000);
             }
         }
 
@@ -204,7 +243,10 @@
                 militaryJeep = true;
                 updateUI();
             } else {
-                console.log('Not enough money or already purchased Military Jeep');
+                document.getElementById('error-message').textContent = 'Not enough money or already purchased Military Jeep';
+                setTimeout(() => {
+                    document.getElementById('error-message').textContent = '';
+                }, 3000);
             }
         }
 
@@ -245,20 +287,20 @@
 
         // Add event listeners for more dinosaurs as needed
 
-        document.getElementById('add-chicken').addEventListener('click', function() {
+        document.getElementById('add-animal-chicken').addEventListener('click', function() {
             addAnimal('animal', 'chicken', 10);
         });
 
-        document.getElementById('add-goat').addEventListener('click', function() {
+        document.getElementById('add-animal-goat').addEventListener('click', function() {
             addAnimal('animal', 'goat', 20);
         });
 
-        document.getElementById('add-horse').addEventListener('click', function() {
+        document.getElementById('add-animal-horse').addEventListener('click', function() {
             addAnimal('animal', 'horse', 30);
         });
 
-        document.getElementById('add-generic-animal').addEventListener('click', function() {
-            addAnimal('animal', 'generic', 15);
+        document.getElementById('add-animal-pig').addEventListener('click', function() {
+            addAnimal('animal', 'pig', 15);
         });
 
         // Add event listeners for more animals as needed
